//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  handle String [unique, not null]
  avatar String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ratings Rating [not null]
  wallets Wallet [not null]
  matchesAsP1 Match [not null]
  matchesAsP2 Match [not null]
}

Table Season {
  id String [pk]
  name String [not null]
  startsAt DateTime [not null]
  endsAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  ratings Rating [not null]
}

Table Rating {
  id String [pk]
  userId String [not null]
  seasonId String [not null]
  elo Int [not null, default: 1000]
  wins Int [not null, default: 0]
  losses Int [not null, default: 0]
  user User [not null]
  season Season [not null]

  indexes {
    (userId, seasonId) [unique]
  }
}

Table Match {
  id String [pk]
  player1Id String [not null]
  player2Id String [not null]
  outcome MatchOutcome [not null]
  p1Score Int [not null]
  p2Score Int [not null]
  playedAt DateTime [default: `now()`, not null]
  replayUrl String
  txHash String
  player1 User [not null]
  player2 User [not null]
}

Table Wallet {
  id String [pk]
  userId String [unique, not null]
  pub_address String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
}

Enum MatchOutcome {
  P1_WIN
  P2_WIN
  DRAW
}

Ref: Rating.userId > User.id

Ref: Rating.seasonId > Season.id

Ref: Match.player1Id > User.id

Ref: Match.player2Id > User.id

Ref: Wallet.userId > User.id